Added readme Added states to app

--- a/Frontend/src/app/modules/auth/register.html
+++ b/Frontend/src/app/modules/auth/register.html
@@ -23,5 +23,9 @@
                 <a href="#/login">Sign In</a>
             </label>
         </div>-->
+        <div>
+            Du hast schon einen Benutzer?
+            <a ui-sref="login">Hier Anmelden</a>
+        </div>
     </form>
 </div>
