--- a/Frontend/src/app/modules/auth/login.html
+++ b/Frontend/src/app/modules/auth/login.html
@@ -14,11 +14,6 @@
             />
             <small class="help-block" ng-show="loginForm.password.$error.minlength && loginForm.password.$touched">Password must be atleast 8 characters.</small>
         </div>
-        <div class="checkbox col-md-6 col-md-offset-3">
-            <label>
-                <a href="#/register">Sign Up</a>
-            </label>
-        </div>
         <div class="col-md-6 col-md-offset-3">
             <p ng-show="errMsg" style="color: red;">{{errorMessage}}</p>
             <button type="submit" class="btn btn-lg btn-primary btn-block" ng-disabled="loginForm.$invalid" ng-click="signIn()">Sign In</button>
@@ -26,6 +21,6 @@
     </form>
     <div>
         Du hast noch keinen Benutzer?
-        <a ng-click='register()'>Hier Registrieren</a>
+        <a ui-sref="register">Hier Registrieren</a>
     </div>
 </div>
