+ added whiskey user and tastes

--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -16,18 +16,15 @@
       <a class="navbar-item" routerLink="/login">
         Anmeldung
       </a>
-      <a class="navbar-item" routerLink="/user">
-        User
-      </a>
       <a class="navbar-item" routerLink="/whiskey">
         Whiskeys
       </a>
-      <a class="navbar-item" routerLink="/notes">
-        Firestore
+      <a class="navbar-item" routerLink="/user">
+        User
       </a>
-      <a class="navbar-item" routerLink="/uploads">
+      <!--<a class="navbar-item" routerLink="/uploads">
         File Uploads
-      </a>
+      </a>-->
     </div>
   </div>
 </nav>
