+ added truffle + added contracts

--- a/src/app/whiskey/whiskey-bottlelist/whiskey-bottlelist.component.html
+++ b/src/app/whiskey/whiskey-bottlelist/whiskey-bottlelist.component.html
@@ -1,11 +1,7 @@
 <h1>Whiskey's to taste</h1>
 <hr>
-
-<input [(ngModel)]="content" placeholder="Add your own whiskey bottle" class="input">
-
-
 <button class="button is-success" (click)="addNewWhiskeyBottle()">
-  Add Whiskey Bottle
+  Add New Whiskey Bottle
 </button>
 <hr>
 <div *ngFor="let whiskey of whiskeybottles | async">
