--- a/src/app/whiskey/whiskey-bottlelist/whiskey-bottlelist.component.html
+++ b/src/app/whiskey/whiskey-bottlelist/whiskey-bottlelist.component.html
@@ -4,6 +4,6 @@
   Add New Whiskey Bottle
 </button>
 <hr>
-<div *ngFor="let whiskey of whiskeybottles | async">
+<div *ngFor="let whiskey of whiskeybottles$ | async">
   <whiskey-detail [WhiskeyBottle]="whiskey"></whiskey-detail>
 </div>
