--- a/src/app/whiskey/whiskey-add/whiskey-add.component.html
+++ b/src/app/whiskey/whiskey-add/whiskey-add.component.html
@@ -1,6 +1,6 @@
 <mat-card-header>
     <mat-toolbar class="toolbar">
-        <mat-card-title>Whiskey Bottle Information</mat-card-title>
+        <mat-card-title>New Whiskey Bottle</mat-card-title>
         <span class="toolbar-spacer"></span>
         <mat-icon (click)="onNoClick()">cancel</mat-icon>
     </mat-toolbar>
