--- a/src/app/whiskey/whiskey-add/whiskey-add.component.html
+++ b/src/app/whiskey/whiskey-add/whiskey-add.component.html
@@ -14,6 +14,8 @@
                         <label>Name</label>
                         <input type="text" formControlName="Name" class="form-control">
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-md-6">
                         <label>Brand</label>
                         <input type="text" formControlName="Brand" class="form-control">
