+ added solidity contracts + added blockchain library + updated environment + added truffle config + added contract service

--- a/src/app/components/whiskey/whiskeydashboard.component.html
+++ b/src/app/components/whiskey/whiskeydashboard.component.html
@@ -4,9 +4,12 @@
 <mat-card-content>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="btn btn-success" (click)="addNewWhiskeyBottle()">Add a new whiskey bottle</div>
             </div>
         </div>
+    </div>
+    <div>
+        <bottle-list></bottle-list>
     </div>
 </mat-card-content>
