--- a/src/app/components/whiskey/bottle-detail/bottle-detail.component.html
+++ b/src/app/components/whiskey/bottle-detail/bottle-detail.component.html
@@ -1,17 +1,13 @@
-<mat-card>
-    <mat-card-title class="md-card-title">{{WhiskeyBottle.name}}</mat-card-title>
-    <mat-card-subtitle class="md-card-title">{{WhiskeyBottle.name}}</mat-card-subtitle>
-
-    <!--<img mat-card-image [src]="{{WhiskeyBottle.imageUrl}}" />-->
-
+<mat-card class="bottlecontainer">
+    <img mat-card-md-image src="{{WhiskeyBottle.imageUrl}}">
+    <mat-card-header>
+        <mat-card-title class="md-card-title">{{WhiskeyBottle.name}}</mat-card-title>
+        <mat-card-subtitle class="md-card-title">{{WhiskeyBottle.brand}}</mat-card-subtitle>
+    </mat-card-header>
     <mat-card-content>
-        <div class="card-text-content">
-            {{WhiskeyBottle.brand}}
-        </div>
+        <button md-button (click)="taste()">Taste</button>
     </mat-card-content>
 
-    <mat-card-actions fxLayout="row" fxLayoutAlign="end center">
-        <button md-button (click)="openDialog()">Taste</button>
-    </mat-card-actions>
-
+    <!--<mat-card-actions fxLayout="row" fxLayoutAlign="end center">
+    </mat-card-actions>-->
 </mat-card>
