--- a/src/app/components/whiskey/bottle-list/whiskeylist.component.html
+++ b/src/app/components/whiskey/bottle-list/whiskeylist.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="4" rowHeight="100px">
+<mat-grid-list [cols]="cols" gutterSize="8px" rowHeight="250px" (window:resize)="onResize($event)">
     <mat-grid-tile *ngFor="let whiskey of whiskeyBottles$ | async">
         <bottle-detail [WhiskeyBottle]="whiskey"></bottle-detail>
     </mat-grid-tile>
