--- a/src/app/components/whiskey/whiskeydashboard.component.html
+++ b/src/app/components/whiskey/whiskeydashboard.component.html
@@ -1,11 +1,2 @@
-<h1>
-    Welcome to the world of whiskey</h1>
-<div class="btn btn-success" (click)="addNewWhiskeyBottle()">New bottle</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <bottle-list></bottle-list>
-        </div>
-    </div>
-</div>
+<div class=" addwhiskey btn btn-success" (click)="addNewWhiskeyBottle()">New bottle</div>
+<bottle-list></bottle-list>
